# ezrassor_sim_gazebo

./: .flake8  CMakeLists.txt  colcon.pkg  package.xml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml
docs/: LICENSE.txt  README.md
env-hooks/: ezrassor_sim_gazebo.sh.in
hook/: ezrassor_sim_gazebo.sh
launch/: gazebo_launch.py
models/base_station/: model.config
models/dem_mars/: model.config  model.sdf
models/dem_mars/materials/textures/: dem_mars.tiff
models/dem_moon/: model.config  model.sdf
models/isru_processing_plant/: model.config  model.sdf
models/iss/: model.config  model.sdf
models/lunar_lander/: model.config  model.sdf
models/mars_rock/: model.config  model.sdf
models/mars_rock/materials/scripts/: textures.material
models/mars_rock/meshes/: model.dae
models/moon_habitat/: model.config
models/radio_tower/: model.config
models/rock_large/: model.config  model.sdf
models/rock_large/materials/scripts/: textures.material
models/rock_large_alt/: model.config  model.sdf
models/rock_large_alt/materials/scripts/: textures.material
models/rock_small/: model.config  model.sdf
models/rock_small/materials/scripts/: textures.material
models/solar_panels/: model.config
models/tile_test/: model.config
test/: check-environment.sh  lint.sh
worlds/: base.world  ez_battle_bots.world  hole.world  mars.world  moon.world  obstacle.world  office_earthquake.world  tile_test.world
